@@ -1,9 +1,12 @@
-/***********************************************************************************************************************
+/*
+ * *********************************************************************************************************************
  *
- * Mistral - open source imaging engine
- * Copyright (C) 2003-2012 by Tidalwave s.a.s.
+ * Mistral: open source imaging engine
+ * http://tidalwave.it/projects/mistral
  *
- ***********************************************************************************************************************
+ * Copyright (C) 2003 - 2023 by Tidalwave s.a.s. (http://tidalwave.it)
+ *
+ * *********************************************************************************************************************
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -14,95 +17,87 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the License for the
  * specific language governing permissions and limitations under the License.
  *
- ***********************************************************************************************************************
+ * *********************************************************************************************************************
  *
- * WWW: http://mistral.tidalwave.it
- * SCM: https://bitbucket.org/tidalwave/mistral-src
+ * git clone https://bitbucket.org/tidalwave/mistral-src
+ * git clone https://github.com/tidalwave-it/mistral-src
  *
- **********************************************************************************************************************/
+ * *********************************************************************************************************************
+ */
 package it.tidalwave.image.java2d;
 
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.Properties;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+import java.awt.Graphics2D;
 import java.awt.GraphicsConfiguration;
 import java.awt.GraphicsDevice;
 import java.awt.GraphicsEnvironment;
-import java.awt.Graphics2D;
 import java.awt.RenderingHints;
-import java.awt.geom.AffineTransform;
-import java.awt.color.ICC_Profile;
 import java.awt.color.ColorSpace;
 import java.awt.color.ICC_ColorSpace;
+import java.awt.color.ICC_Profile;
+import java.awt.geom.AffineTransform;
 import java.awt.image.AffineTransformOp;
 import java.awt.image.BufferedImage;
-import java.awt.image.Kernel;
-import java.awt.image.RenderedImage;
 import java.awt.image.ColorModel;
-import java.awt.image.PixelInterleavedSampleModel;
-import java.awt.image.SampleModel;
-import java.awt.image.SinglePixelPackedSampleModel;
 import java.awt.image.DataBuffer;
 import java.awt.image.DataBufferByte;
 import java.awt.image.DataBufferInt;
 import java.awt.image.DataBufferUShort;
 import java.awt.image.DirectColorModel;
+import java.awt.image.Kernel;
+import java.awt.image.PixelInterleavedSampleModel;
 import java.awt.image.Raster;
+import java.awt.image.RenderedImage;
+import java.awt.image.SampleModel;
+import java.awt.image.SinglePixelPackedSampleModel;
 import java.awt.image.WritableRaster;
-import it.tidalwave.image.Kernel2;
+import org.slf4j.Logger;
 import it.tidalwave.image.ImageUtils;
+import it.tidalwave.image.Kernel2;
 import it.tidalwave.image.Quality;
+import lombok.extern.slf4j.Slf4j;
 
-
-/*******************************************************************************
+/***********************************************************************************************************************
  *
- * @author  Fabrizio Giudici
- * @version $Id$
+ * @author Fabrizio Giudici
  *
- ******************************************************************************/
+ **********************************************************************************************************************/
+@Slf4j
 public class Java2DUtils
   {
-    private static final String CLASS = Java2DUtils.class.getName();
-    private static final Logger logger = Logger.getLogger(CLASS);
-    public static final Float ZERO = Float.valueOf(0);
-    private static final Map<Quality, Object> renderingHintsQualityMap = Collections.unmodifiableMap(new HashMap<Quality, Object>()
-              {
+    public static final Float ZERO = (float)0;
+    private static final Map<Quality, Object> renderingHintsQualityMap =
+            Map.of(Quality.FASTEST,
+                   RenderingHints.VALUE_INTERPOLATION_NEAREST_NEIGHBOR,
+                   Quality.INTERMEDIATE,
+                   RenderingHints.VALUE_INTERPOLATION_BILINEAR,
+                   Quality.BEST,
+                   RenderingHints.VALUE_INTERPOLATION_BICUBIC);
 
-                {
-                    put(Quality.FASTEST, RenderingHints.VALUE_INTERPOLATION_NEAREST_NEIGHBOR);
-                    put(Quality.INTERMEDIATE, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
-                    put(Quality.BEST, RenderingHints.VALUE_INTERPOLATION_BICUBIC);
-                }
-              });
+    private static final Map<Quality, Integer> affineTransformQualityMap =
+            Map.of(Quality.FASTEST,
+                   AffineTransformOp.TYPE_NEAREST_NEIGHBOR,
+                   Quality.INTERMEDIATE,
+                   AffineTransformOp.TYPE_BILINEAR,
+                   Quality.BEST,
+                   AffineTransformOp.TYPE_BICUBIC);
 
-    private static final Map<Quality, Integer> affineTransformQualityMap = Collections.unmodifiableMap(new HashMap<Quality, Integer>()
-              {
-
-                {
-                    put(Quality.FASTEST, AffineTransformOp.TYPE_NEAREST_NEIGHBOR);
-                    put(Quality.INTERMEDIATE, AffineTransformOp.TYPE_BILINEAR);
-                    put(Quality.BEST, AffineTransformOp.TYPE_BICUBIC);
-                }
-              });
-
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    public static Properties getProperties (BufferedImage image)
+     ******************************************************************************************************************/
+    public static Properties getProperties (final BufferedImage image)
       {
-        Properties properties = new Properties();
-        String[] propertyNames = image.getPropertyNames();
+        final Properties properties = new Properties();
+        final String[] propertyNames = image.getPropertyNames();
 
         if (propertyNames != null)
           {
-            for (int i = 0; i < propertyNames.length; i++)
+            for (final String propertyName : propertyNames)
               {
-                String propertyName = propertyNames[i];
-                Object propertyValue = image.getProperty(propertyName);
+                final Object propertyValue = image.getProperty(propertyName);
                 properties.setProperty(propertyName, propertyValue.toString());
               }
           }
@@ -110,56 +105,57 @@ public class Java2DUtils
         return properties;
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * @param width
      * @param height
      * @return
      *
-     ******************************************************************************/
+     ******************************************************************************************************************/
     public static BufferedImage createOptimizedImage (final int width, final int height)
       {
-        GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
-        GraphicsDevice gs = ge.getDefaultScreenDevice();
-        GraphicsConfiguration gc = gs.getDefaultConfiguration();
+        final GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
+        final GraphicsDevice gs = ge.getDefaultScreenDevice();
+        final GraphicsConfiguration gc = gs.getDefaultConfiguration();
 
         return gc.createCompatibleImage(width, height);
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    public static GraphicsConfiguration getGraphicsConfiguration ()
+     ******************************************************************************************************************/
+    public static GraphicsConfiguration getGraphicsConfiguration()
       {
-        GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
-        GraphicsDevice[] gs = ge.getScreenDevices();
-        GraphicsDevice gd = gs[0]; // FIXME
-        GraphicsConfiguration gc = gd.getDefaultConfiguration();
+        final GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
+        final GraphicsDevice[] gs = ge.getScreenDevices();
+        final GraphicsDevice gd = gs[0]; // FIXME
 
-        return gc;
+        return gd.getDefaultConfiguration();
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    public static BufferedImage createSimilarImage (final BufferedImage bufferedImage, final int newWidth, final int newHeight)
+     ******************************************************************************************************************/
+    public static BufferedImage createSimilarImage (final BufferedImage bufferedImage,
+                                                    final int newWidth,
+                                                    final int newHeight)
       {
-        SampleModel sampleModel = bufferedImage.getSampleModel().createCompatibleSampleModel(newWidth, newHeight);
-        WritableRaster newRaster = Raster.createWritableRaster(sampleModel, null);
-        ColorModel colorModel = bufferedImage.getColorModel();
+        final SampleModel sampleModel = bufferedImage.getSampleModel().createCompatibleSampleModel(newWidth, newHeight);
+        final WritableRaster newRaster = Raster.createWritableRaster(sampleModel, null);
+        final ColorModel colorModel = bufferedImage.getColorModel();
 
         return new BufferedImage(colorModel, newRaster, false, Java2DUtils.getProperties(bufferedImage));
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    public static String getICCProfileName (RenderedImage image)
+     ******************************************************************************************************************/
+    public static String getICCProfileName (final RenderedImage image)
       {
-        ICC_Profile iccProfile = ImageUtils.getICCProfile(image);
+        final ICC_Profile iccProfile = ImageUtils.getICCProfile(image);
 
         if (iccProfile != null)
           {
@@ -172,65 +168,74 @@ public class Java2DUtils
           }
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * It seems that SinglePixelPackedSampleModel is the only fast mode when a
      * color profile is converted. This is probably a bug (that has nothing to do
      * with bugs 4886071 and 4705399).
      * Note that grayscale images (TYPE_GRAY) are not converted.
      *
-     ******************************************************************************/
+     ******************************************************************************************************************/
     public static BufferedImage convertToSinglePixelPackedSampleModel (BufferedImage image)
       {
-        logger.fine("convertToSinglePixelPackedSampleModel(image: " + image + ")");
-        Java2DUtils.logImage(logger, ">>>> source bufferedImage", image);
+        log.debug("convertToSinglePixelPackedSampleModel(image: " + image + ")");
+        Java2DUtils.logImage(log, ">>>> source bufferedImage", image);
 
         long time = System.currentTimeMillis();
 
-        WritableRaster sourceRaster = image.getRaster();
+        final WritableRaster sourceRaster = image.getRaster();
         ColorModel colorModel = image.getColorModel();
         ICC_ColorSpace colorSpace = (ICC_ColorSpace)colorModel.getColorSpace();
         final SampleModel ssmd = sourceRaster.getSampleModel();
-        
+
         if (colorSpace.getType() == ColorSpace.TYPE_GRAY)
           {
-            logger.fine(">>>> TYPE_GRAY, not converting");
+            log.debug(">>>> TYPE_GRAY, not converting");
           }
 
         else if (!(ssmd instanceof PixelInterleavedSampleModel))
           {
-            logger.fine(">>>> sourceSampleModel is " + ssmd.getClass() + ", not converting");
+            log.debug(">>>> sourceSampleModel is " + ssmd.getClass() + ", not converting");
           }
-        
+
         else
           {
-            PixelInterleavedSampleModel sourceSampleModel = (PixelInterleavedSampleModel)ssmd;
-            int[] bitMasks = new int[] { 0x00ff0000, 0x0000ff00, 0x000000ff };
+            final PixelInterleavedSampleModel sourceSampleModel = (PixelInterleavedSampleModel)ssmd;
+            final int[] bitMasks = new int[]{0x00ff0000, 0x0000ff00, 0x000000ff};
 
-            SinglePixelPackedSampleModel sampleModel = new SinglePixelPackedSampleModel(DataBuffer.TYPE_INT, image.getWidth(),
-                    image.getHeight(), bitMasks);
+            final SinglePixelPackedSampleModel sampleModel =
+                    new SinglePixelPackedSampleModel(DataBuffer.TYPE_INT, image.getWidth(),
+                                                     image.getHeight(), bitMasks);
 
-            WritableRaster destRaster = Raster.createWritableRaster(sampleModel, null);
-            DataBufferInt destDataBuffer = (DataBufferInt)destRaster.getDataBuffer();
-            int[] destBuffer = destDataBuffer.getData();
-            int[] bandOffsets = sourceSampleModel.getBandOffsets();
+            final WritableRaster destRaster = Raster.createWritableRaster(sampleModel, null);
+            final DataBufferInt destDataBuffer = (DataBufferInt)destRaster.getDataBuffer();
+            final int[] destBuffer = destDataBuffer.getData();
+            final int[] bandOffsets = sourceSampleModel.getBandOffsets();
 
             for (int i = 0; i < bandOffsets.length; i++)
               {
                 bandOffsets[i] += ((-sourceRaster.getSampleModelTranslateX() * sourceSampleModel.getPixelStride()) -
-                (sourceRaster.getSampleModelTranslateY() * sourceSampleModel.getScanlineStride()));
+                                   (sourceRaster.getSampleModelTranslateY() * sourceSampleModel.getScanlineStride()));
               }
 
-            DataBuffer sourceDataBuffer = sourceRaster.getDataBuffer();
+            final DataBuffer sourceDataBuffer = sourceRaster.getDataBuffer();
 
             if (sourceDataBuffer instanceof DataBufferUShort)
               {
-                convertUShortDataBuffer(image, (DataBufferUShort)sourceDataBuffer, sourceSampleModel, bandOffsets, destBuffer);
+                convertUShortDataBuffer(image,
+                                        (DataBufferUShort)sourceDataBuffer,
+                                        sourceSampleModel,
+                                        bandOffsets,
+                                        destBuffer);
               }
 
             else if (sourceDataBuffer instanceof DataBufferByte)
               {
-                convertByteDataBuffer(image, (DataBufferByte)sourceDataBuffer, sourceSampleModel, bandOffsets, destBuffer);
+                convertByteDataBuffer(image,
+                                      (DataBufferByte)sourceDataBuffer,
+                                      sourceSampleModel,
+                                      bandOffsets,
+                                      destBuffer);
               }
 
             else
@@ -238,26 +243,33 @@ public class Java2DUtils
                 throw new IllegalArgumentException("Cannot deal with " + sourceDataBuffer.getClass());
               }
 
-            String sourceProfileName = ImageUtils.getICCProfileName(colorSpace.getProfile());
+            final String sourceProfileName = ImageUtils.getICCProfileName(colorSpace.getProfile());
 
             if (sourceProfileName.equals("Nikon sRGB 4.0.0.3001"))
               {
-                logger.warning(">>>> Workaround #1094403: using sRGB instead of " + sourceProfileName);
+                log.warn(">>>> Workaround #1094403: using sRGB instead of " + sourceProfileName);
                 colorSpace = new ICC_ColorSpace(ICC_Profile.getInstance(ColorSpace.CS_LINEAR_RGB));
               }
 
-            colorModel = new DirectColorModel(colorSpace, 24, bitMasks[0], bitMasks[1], bitMasks[2], 0, false, DataBuffer.TYPE_INT);
+            colorModel = new DirectColorModel(colorSpace,
+                                              24,
+                                              bitMasks[0],
+                                              bitMasks[1],
+                                              bitMasks[2],
+                                              0,
+                                              false,
+                                              DataBuffer.TYPE_INT);
             image = new BufferedImage(colorModel, destRaster, false, null);
           }
 
         time = System.currentTimeMillis() - time;
-        Java2DUtils.logImage(logger, ">>>> convertToSinglePixelPackedSampleModel() returning", image);
-        logger.fine(">>>> convertToSinglePixelPackedSampleModel() completed ok in " + time + " msec");
+        Java2DUtils.logImage(log, ">>>> convertToSinglePixelPackedSampleModel() returning", image);
+        log.debug(">>>> convertToSinglePixelPackedSampleModel() completed ok in " + time + " msec");
 
         return image;
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * Scales a <code>BufferedImage</code> by filtering with an
      * <code>AffineTransform</code>.
@@ -267,23 +279,25 @@ public class Java2DUtils
      * @param   yScale         the vertical scale
      * @param   quality        the quality
      *
-     ******************************************************************************/
-    public static BufferedImage scaleWithAffineTransform (final BufferedImage bufferedImage, final double xScale, final double yScale,
-        final Quality quality)
-        throws IllegalArgumentException
+     ******************************************************************************************************************/
+    public static BufferedImage scaleWithAffineTransform (final BufferedImage bufferedImage,
+                                                          final double xScale,
+                                                          final double yScale,
+                                                          final Quality quality)
+            throws IllegalArgumentException
       {
-        logger.fine("scaleWithAffineTransform(" + xScale + ", " + yScale + ", " + quality);
+        log.debug("scaleWithAffineTransform(" + xScale + ", " + yScale + ", " + quality);
 
         final AffineTransform transform = AffineTransform.getScaleInstance(xScale, yScale);
         final int interpolation = findAffineTransformInterpolation(quality);
-        logger.finer(">>>> AffineTransformOp(" + transform + ", " + interpolation + ")");
+        log.debug(">>>> AffineTransformOp(" + transform + ", " + interpolation + ")");
 
         final AffineTransformOp op = new AffineTransformOp(transform, interpolation);
 
         return op.filter(bufferedImage, null);
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * Scales a <code>BufferedImage</code> by redrawing it on a new bitmap.
      *
@@ -292,19 +306,21 @@ public class Java2DUtils
      * @param   yScale         the vertical scale
      * @param   quality        the quality
      *
-     ******************************************************************************/
-    public static BufferedImage scaleWithDrawImage (final BufferedImage bufferedImage, final double xScale, final double yScale,
-        final Quality quality)
-        throws IllegalArgumentException
+     ******************************************************************************************************************/
+    public static BufferedImage scaleWithDrawImage (final BufferedImage bufferedImage,
+                                                    final double xScale,
+                                                    final double yScale,
+                                                    final Quality quality)
+            throws IllegalArgumentException
       {
-        logger.fine("scaleWithDrawImage(" + xScale + ", " + yScale + ", " + quality);
+        log.debug("scaleWithDrawImage(" + xScale + ", " + yScale + ", " + quality);
 
-        int newWidth = (int)Math.round(bufferedImage.getWidth() * xScale);
-        int newHeight = (int)Math.round(bufferedImage.getHeight() * yScale);
-        BufferedImage result = createSimilarImage(bufferedImage, newWidth, newHeight);
+        final int newWidth = (int)Math.round(bufferedImage.getWidth() * xScale);
+        final int newHeight = (int)Math.round(bufferedImage.getHeight() * yScale);
+        final BufferedImage result = createSimilarImage(bufferedImage, newWidth, newHeight);
 
-        Graphics2D g2d = (Graphics2D)result.getGraphics();
-        Object interpolation = findRenderingHintsInterpolation(quality);
+        final Graphics2D g2d = (Graphics2D)result.getGraphics();
+        final Object interpolation = findRenderingHintsInterpolation(quality);
         g2d.setRenderingHint(RenderingHints.KEY_INTERPOLATION, interpolation);
 
         try
@@ -319,22 +335,24 @@ public class Java2DUtils
         return result;
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    public static BufferedImage rotateWithDrawImage (final BufferedImage bufferedImage, final double degrees, final Quality quality)
+     ******************************************************************************************************************/
+    public static BufferedImage rotateWithDrawImage (final BufferedImage bufferedImage,
+                                                     final double degrees,
+                                                     final Quality quality)
       {
-        double radians = Math.toRadians(degrees);
-        double cos = Math.cos(radians);
-        double sin = Math.sin(radians);
-        int width = bufferedImage.getWidth();
-        int height = bufferedImage.getHeight();
-        int newWidth = (int)Math.round(Math.abs(width * cos) + Math.abs(height * sin));
-        int newHeight = (int)Math.round(Math.abs(width * sin) + Math.abs(height * cos));
-        BufferedImage result = createSimilarImage(bufferedImage, newWidth, newHeight);
-        Graphics2D g2d = (Graphics2D)result.getGraphics();
-        Object interpolation = findRenderingHintsInterpolation(quality);
+        final double radians = Math.toRadians(degrees);
+        final double cos = Math.cos(radians);
+        final double sin = Math.sin(radians);
+        final int width = bufferedImage.getWidth();
+        final int height = bufferedImage.getHeight();
+        final int newWidth = (int)Math.round(Math.abs(width * cos) + Math.abs(height * sin));
+        final int newHeight = (int)Math.round(Math.abs(width * sin) + Math.abs(height * cos));
+        final BufferedImage result = createSimilarImage(bufferedImage, newWidth, newHeight);
+        final Graphics2D g2d = (Graphics2D)result.getGraphics();
+        final Object interpolation = findRenderingHintsInterpolation(quality);
         g2d.setRenderingHint(RenderingHints.KEY_INTERPOLATION, interpolation);
 
         try
@@ -352,13 +370,13 @@ public class Java2DUtils
         return result;
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    protected static String toString (int[] array, int radix)
+     ******************************************************************************************************************/
+    protected static String toString (final int[] array, final int radix)
       {
-        StringBuffer buffer = new StringBuffer("");
+        final StringBuilder buffer = new StringBuilder();
 
         for (int i = 0; i < array.length; i++)
           {
@@ -377,32 +395,33 @@ public class Java2DUtils
      * @param image
      */
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    public static void logImage (final Logger logger, final String prefix, final RenderedImage image)
+     ******************************************************************************************************************/
+    public static void logImage (final Logger log, final String prefix, final RenderedImage image)
       {
-        if (logger.isLoggable(Level.FINE))
+        if (Java2DUtils.log.isDebugEnabled())
           {
             if (image == null)
               {
-                logger.fine(prefix + "null image");
+                Java2DUtils.log.debug(prefix + "null image");
               }
-            
+
             else
               {
 //            image.getData(); THIS IS SLOW SLOW SLOW!!
-                ColorModel colorModel = image.getColorModel();
-                logger.fine(prefix + ".size:           " + image.getWidth() + ", " + image.getHeight());
-                logger.fine(prefix + ".tiles:          " + image.getNumXTiles() + " " + image.getNumYTiles());
-                logger.fine(prefix + ".class:          " + image.getClass().getName());
-                logger.fine(prefix + ".sampleModel:    " + toString(image.getSampleModel()));
+                final ColorModel colorModel = image.getColorModel();
+                Java2DUtils.log.debug(prefix + ".size:           " + image.getWidth() + ", " + image.getHeight());
+                Java2DUtils.log.debug(prefix + ".tiles:          " + image.getNumXTiles() + " " + image.getNumYTiles());
+                Java2DUtils.log.debug(prefix + ".class:          " + image.getClass().getName());
+                Java2DUtils.log.debug(prefix + ".sampleModel:    " + toString(image.getSampleModel()));
 
                 if (colorModel != null)
                   {
-                    logger.fine(prefix + ".colorModel:     " + colorModel.getClass().getName() + " : " + colorModel);
-                    logger.fine(prefix + ".colorSpace:     " + toString(colorModel.getColorSpace()));
+                    Java2DUtils.log.debug(
+                            prefix + ".colorModel:     " + colorModel.getClass().getName() + " : " + colorModel);
+                    Java2DUtils.log.debug(prefix + ".colorSpace:     " + toString(colorModel.getColorSpace()));
                   }
               }
 
@@ -414,40 +433,7 @@ public class Java2DUtils
      *
      *
      ******************************************************************************************************************/
-    public static void logImage (final org.slf4j.Logger log, final String prefix, final RenderedImage image)
-      {
-        if (log.isDebugEnabled())
-          {
-            if (image == null)
-              {
-                log.debug(prefix + "null image");
-              }
-            
-            else
-              {
-//            image.getData(); THIS IS SLOW SLOW SLOW!!
-                ColorModel colorModel = image.getColorModel();
-                log.debug(prefix + ".size:           " + image.getWidth() + ", " + image.getHeight());
-                log.debug(prefix + ".tiles:          " + image.getNumXTiles() + " " + image.getNumYTiles());
-                log.debug(prefix + ".class:          " + image.getClass().getName());
-                log.debug(prefix + ".sampleModel:    " + toString(image.getSampleModel()));
-
-                if (colorModel != null)
-                  {
-                    log.debug(prefix + ".colorModel:     " + colorModel.getClass().getName() + " : " + colorModel);
-                    log.debug(prefix + ".colorSpace:     " + toString(colorModel.getColorSpace()));
-                  }
-              }
-
-            //      log.debug(">>>> iccProfile is now: " + getICCProfileName(bufferedImage));
-          }
-      }
-
-    /*******************************************************************************
-     *
-     *
-     ******************************************************************************/
-    private static String toString (SampleModel sampleModel)
+    private static String toString (final SampleModel sampleModel)
       {
         if (sampleModel instanceof SinglePixelPackedSampleModel)
           {
@@ -465,11 +451,11 @@ public class Java2DUtils
           }
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    private static String toString (ColorSpace colorSpace)
+     ******************************************************************************************************************/
+    private static String toString (final ColorSpace colorSpace)
       {
         if (colorSpace instanceof ICC_ColorSpace)
           {
@@ -482,13 +468,13 @@ public class Java2DUtils
           }
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    private static String toString (ICC_ColorSpace colorSpace)
+     ******************************************************************************************************************/
+    private static String toString (final ICC_ColorSpace colorSpace)
       {
-        StringBuffer buffer = new StringBuffer("");
+        final StringBuilder buffer = new StringBuilder();
         buffer.append(colorSpace.getClass().getName());
         buffer.append("[type: ");
         buffer.append(colorSpace.getType());
@@ -499,13 +485,13 @@ public class Java2DUtils
         return buffer.toString();
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    private static String toString (SinglePixelPackedSampleModel sampleModel)
+     ******************************************************************************************************************/
+    private static String toString (final SinglePixelPackedSampleModel sampleModel)
       {
-        StringBuffer buffer = new StringBuffer("");
+        final StringBuilder buffer = new StringBuilder();
         buffer.append(sampleModel.getClass().getName());
         buffer.append("[width: ");
         buffer.append(sampleModel.getWidth());
@@ -530,13 +516,13 @@ public class Java2DUtils
         return buffer.toString();
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
-    private static String toString (PixelInterleavedSampleModel sampleModel)
+     ******************************************************************************************************************/
+    private static String toString (final PixelInterleavedSampleModel sampleModel)
       {
-        StringBuffer buffer = new StringBuffer("");
+        final StringBuilder buffer = new StringBuilder();
         buffer.append(sampleModel.getClass().getName());
         buffer.append("[width: ");
         buffer.append(sampleModel.getWidth());
@@ -561,7 +547,7 @@ public class Java2DUtils
         return buffer.toString();
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * @param image
      * @param sourceDataBuffer
@@ -569,13 +555,16 @@ public class Java2DUtils
      * @param bandOffsets
      * @param destBuffer
      *
-     ******************************************************************************/
-    private static void convertUShortDataBuffer (BufferedImage image, DataBufferUShort sourceDataBuffer,
-        PixelInterleavedSampleModel sourceSampleModel, int[] bandOffsets, int[] destBuffer)
+     ******************************************************************************************************************/
+    private static void convertUShortDataBuffer (final BufferedImage image,
+                                                 final DataBufferUShort sourceDataBuffer,
+                                                 final PixelInterleavedSampleModel sourceSampleModel,
+                                                 final int[] bandOffsets,
+                                                 final int[] destBuffer)
       {
         int base = 0;
         int i = 0;
-        short[] sourceBuffer = sourceDataBuffer.getData();
+        final short[] sourceBuffer = sourceDataBuffer.getData();
 
         for (int y = 0; y < image.getHeight(); y++)
           {
@@ -583,9 +572,9 @@ public class Java2DUtils
 
             for (int x = 0; x < image.getWidth(); x++)
               {
-                int r = (sourceBuffer[j + bandOffsets[0]] & 0xffff) >> 8;
-                int g = (sourceBuffer[j + bandOffsets[1]] & 0xffff) >> 8;
-                int b = (sourceBuffer[j + bandOffsets[2]] & 0xffff) >> 8;
+                final int r = (sourceBuffer[j + bandOffsets[0]] & 0xffff) >> 8;
+                final int g = (sourceBuffer[j + bandOffsets[1]] & 0xffff) >> 8;
+                final int b = (sourceBuffer[j + bandOffsets[2]] & 0xffff) >> 8;
 
                 destBuffer[i++] = (r << 16) | (g << 8) | b;
                 j += 3;
@@ -602,13 +591,16 @@ public class Java2DUtils
      * @param bandOffsets
      * @param destBuffer
      */
-    private static void convertByteDataBuffer (BufferedImage image, DataBufferByte sourceDataBuffer,
-        PixelInterleavedSampleModel sourceSampleModel, int[] bandOffsets, int[] destBuffer)
+    private static void convertByteDataBuffer (final BufferedImage image,
+                                               final DataBufferByte sourceDataBuffer,
+                                               final PixelInterleavedSampleModel sourceSampleModel,
+                                               final int[] bandOffsets,
+                                               final int[] destBuffer)
       {
         int base = 0;
         int i = 0;
-        byte[] sourceBuffer = sourceDataBuffer.getData();
-        int pixelStride = sourceSampleModel.getPixelStride();
+        final byte[] sourceBuffer = sourceDataBuffer.getData();
+        final int pixelStride = sourceSampleModel.getPixelStride();
 
         for (int y = 0; y < image.getHeight(); y++)
           {
@@ -616,9 +608,9 @@ public class Java2DUtils
 
             for (int x = 0; x < image.getWidth(); x++)
               {
-                int r = (sourceBuffer[j + bandOffsets[0]] & 0xff);
-                int g = (sourceBuffer[j + bandOffsets[1]] & 0xff);
-                int b = (sourceBuffer[j + bandOffsets[2]] & 0xff);
+                final int r = (sourceBuffer[j + bandOffsets[0]] & 0xff);
+                final int g = (sourceBuffer[j + bandOffsets[1]] & 0xff);
+                final int b = (sourceBuffer[j + bandOffsets[2]] & 0xff);
 
                 destBuffer[i++] = (r << 16) | (g << 8) | b;
                 j += pixelStride;
@@ -628,26 +620,29 @@ public class Java2DUtils
           }
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * @param xScale
      * @param yScale
      * @param quality
      * @return
      *
-     ******************************************************************************/
-    public static BufferedImage createOptimizedImage (BufferedImage bufferedImage, double xScale, double yScale, Quality quality)
+     ******************************************************************************************************************/
+    public static BufferedImage createOptimizedImage (final BufferedImage bufferedImage,
+                                                      final double xScale,
+                                                      final double yScale,
+                                                      final Quality quality)
       {
-        logger.fine("createOptimizedImage(" + xScale + ", " + yScale + ", " + quality + ")");
+        log.debug("createOptimizedImage(" + xScale + ", " + yScale + ", " + quality + ")");
 
-        int iw = (int)Math.round(xScale * bufferedImage.getWidth());
-        int ih = (int)Math.round(yScale * bufferedImage.getHeight());
-        BufferedImage image2 = createOptimizedImage(iw, ih);
-        Graphics2D g = (Graphics2D)image2.getGraphics();
+        final int iw = (int)Math.round(xScale * bufferedImage.getWidth());
+        final int ih = (int)Math.round(yScale * bufferedImage.getHeight());
+        final BufferedImage image2 = createOptimizedImage(iw, ih);
+        final Graphics2D g = (Graphics2D)image2.getGraphics();
 
         try
           {
-            Object interpolation = findRenderingHintsInterpolation(quality);
+            final Object interpolation = findRenderingHintsInterpolation(quality);
 
             // Workaround for bugs #4886071 and #4705399
             // See http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4886071
@@ -665,7 +660,8 @@ public class Java2DUtils
              BufferedImage tempImage = createOptimizedImage(bufferedImage.getWidth(), bufferedImage.getHeight());
              long time = System.currentTimeMillis();
 
-             //BufferedImage image2 = new BufferedImage(image.getWidth(), image.getHeight(), BufferedImage.TYPE_INT_RGB);
+             //BufferedImage image2 = new BufferedImage(image.getWidth(), image.getHeight(), BufferedImage
+             * .TYPE_INT_RGB);
              Graphics g3 = tempImage.getGraphics();
              g3.drawImage(bufferedImage, 0, 0, null);
              g3.dispose();
@@ -674,12 +670,13 @@ public class Java2DUtils
              }
              }
              */
-            logger.finer(">>>> applying AffineTransform.getScaleInstance() with RenderingHint: " + interpolation);
+            log.debug(">>>> applying AffineTransform.getScaleInstance() with RenderingHint: " + interpolation);
 
-            Object renderingHintSave = g.getRenderingHint(RenderingHints.KEY_INTERPOLATION);
+            final Object renderingHintSave = g.getRenderingHint(RenderingHints.KEY_INTERPOLATION);
             g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, interpolation);
 
-            AffineTransform transform = ((xScale == 1.0) && (yScale == 1.0)) ? null : AffineTransform.getScaleInstance(xScale, yScale);
+            final AffineTransform transform =
+                    ((xScale == 1.0) && (yScale == 1.0)) ? null : AffineTransform.getScaleInstance(xScale, yScale);
             g.drawRenderedImage(bufferedImage, transform);
 
             if (renderingHintSave != null)
@@ -687,7 +684,7 @@ public class Java2DUtils
                 g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, renderingHintSave);
               }
 
-            logger.finer(">>>>>>>> iccProfile is now: " + Java2DUtils.getICCProfileName(image2));
+            log.debug(">>>>>>>> iccProfile is now: " + Java2DUtils.getICCProfileName(image2));
           }
 
         finally
@@ -698,12 +695,12 @@ public class Java2DUtils
         return image2;
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
+     ******************************************************************************************************************/
     public static Object findRenderingHintsInterpolation (final Quality quality)
-        throws IllegalArgumentException
+            throws IllegalArgumentException
       {
         if (!renderingHintsQualityMap.containsKey(quality))
           {
@@ -713,12 +710,12 @@ public class Java2DUtils
         return renderingHintsQualityMap.get(quality);
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      *
-     ******************************************************************************/
+     ******************************************************************************************************************/
     public static int findAffineTransformInterpolation (final Quality quality)
-        throws IllegalArgumentException
+            throws IllegalArgumentException
       {
         if (!affineTransformQualityMap.containsKey(quality))
           {
@@ -728,13 +725,13 @@ public class Java2DUtils
         return affineTransformQualityMap.get(quality);
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * @param n
      * @return
      *
-     ******************************************************************************/
-    public static Kernel getAveragingKernel (int n)
+     ******************************************************************************************************************/
+    public static Kernel getAveragingKernel (final int n)
       {
         Kernel kernel = null;
 
@@ -752,67 +749,62 @@ public class Java2DUtils
         return kernel;
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * @param n
      * @return
      *
-     ******************************************************************************/
-    private static Kernel getEvenAveragingKernel (int n)
+     ******************************************************************************************************************/
+    private static Kernel getEvenAveragingKernel (final int n)
       {
-        int r = n + 1;
-        int totalCount = r * r;
-        int coreCount = (r - 2) * (r - 2);
-        int extCount = totalCount - coreCount;
-        float a = 1.0f / ((coreCount * 2) + extCount); // core count double
-        float coreValue = a * 2;
-        float extValue = a;
-        float[] result = new float[totalCount];
+        final int r = n + 1;
+        final int totalCount = r * r;
+        final int coreCount = (r - 2) * (r - 2);
+        final int extCount = totalCount - coreCount;
+        final float a = 1.0f / ((coreCount * 2) + extCount); // core count double
+        final float coreValue = a * 2;
+        final float[] result = new float[totalCount];
 
         int j = 0;
 
         for (int i = 0; i < r; i++)
           {
-            result[j++] = extValue;
+            result[j++] = a;
           }
 
         for (int k = 0; k < (r - 2); k++)
           {
-            result[j++] = extValue;
+            result[j++] = a;
 
             for (int h = 0; h < (r - 2); h++)
               {
                 result[j++] = coreValue;
               }
 
-            result[j++] = extValue;
+            result[j++] = a;
           }
 
         for (int i = 0; i < r; i++)
           {
-            result[j++] = extValue;
+            result[j++] = a;
           }
         assert j == totalCount;
 
         return new Kernel2(r, r, result);
       }
 
-    /*******************************************************************************
+    /*******************************************************************************************************************
      *
      * @param n
      * @return
      *
-     ******************************************************************************/
-    private static Kernel getOddAveragingKernel (int n)
+     ******************************************************************************************************************/
+    private static Kernel getOddAveragingKernel (final int n)
       {
-        int totalCount = n * n;
-        float v = 1.0f / (totalCount);
-        float[] result = new float[totalCount];
-
-        for (int i = 0; i < result.length; i++)
-          {
-            result[i] = v;
-          }
+        final int totalCount = n * n;
+        final float v = 1.0f / (totalCount);
+        final float[] result = new float[totalCount];
+        Arrays.fill(result, v);
 
         return new Kernel2(n, n, result);
       }
